<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">ExSTREAM</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="email_user">EMAIL </string>
    <string name="existing_user_login">EXISTING USER LOGIN</string>
    <string name="stay_logged_in">STAY LOGGED IN</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="terms_of_use">TERMS OF USE</string>
    <string name="about_exstream">ABOUT EXSTREAM</string>
    <string name="copyright_information">COPYRIGHT INFORMATION</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="password">PASSWORD</string>
    <string name="err_please_enter_email">Please enter email</string>
    <string name="err_please_enter_password">Please enter password</string>
    <string name="login_error_message">The user name or password is incorrect</string>
    <string name="err_please_enter_valid_email">Please enter valid email</string>
    <string name="login_success">Login Successful</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="email_str">Enter your registered email *</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="develop_across">Develop across all platforms</string>
    <string name="aboutus_txt">Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop.</string>
    <string name="terms_txt">Help protect your website and its users with clear and fair website terms and conditions. These terms and conditions for a website set out key issues such as acceptable use, privacy, cookies, registration and passwords, intellectual property, links to other sites, termination and disclaimers of responsibility. Terms and conditions are used and necessary to protect a website owner from liability of a user relying on the information or the goods provided from the site then suffering a loss. Making your own terms and conditions for your website is hard, not impossible, to do. It can take a few hours to few days for a person with no legal background to make. But worry no more; we are here to help you out. All you need to do is fill up the blank spaces and then you will receive an email with your personalized terms and conditions.</string>
    <string name="privacy_txt">Companies whose business models revolve around handling sensitive customer information find it incredibly important to establish trust with their users. A clear and comprehensive Privacy Policy agreement that tells users exactly what information the company collects and what it does with that information inspires confidence in a business. It gives users a sense of security knowing how much control they have over their personal data under the conditions they sign up for. Your Privacy Policy agreement should inform your users about how your website or app handles their personal information. Your users must be also be informed about the reason for the collection of information, as well as how long their data will be stored on your servers.</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="company">COMPANY</string>
    <string name="phone_no">PHONE NUMBER</string>
    <string name="phone">PHONE</string>
    <string name="enter_cutomer_url">ENTER CUSTOM URL</string>
    <string name="exstream_tech">.exstream.tech</string>
    <string name="password_requriments">Password requrirements:</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>
    <string name="term_create_account">I have read and agree to  ExSTREAM Terms of Use</string>
    <string name="only_create">Only create a new account if you\'re setting up ExSTREAM for a new company or group of properties.</string>
    <string name="use_exstream">If you already use ExSTREAM at a property, you can add a new property in your existing account. Login to your account.</string>
    <string name="working_for_a_company">If you are working for a company that already uses ExSTREAM. contact that company\'s system administrator to be added as a user.</string>
    <string name="not_sure">Not sure if there\'s an ExSTREAM account for your property already? Contact Us.</string>
    <string name="existing_user">EXISTING USER LOGIN</string>
    <string name="password_reset_create">PASSWORD RESET</string>
    <string name="your_exstream">Your ExSTREAM account can be accessed through our mobile app or from the web browser of your desktop computer. To create your accounts custom URL. enter text with no spaces or punctuation:</string>
    <string name="characters"> 8 Characters</string>
    <string name="captial_lower">Capital and lower-case</string>
    <string name="alphanumeric">Alphanumeric</string>
    <string name="read_agree">I have read and agree to ExSTREAM Terms of Use</string>
    <string name="err_please_enter_first_name">Please enter first name</string>
    <string name="err_please_enter_last_name">Please enter last name</string>
    <string name="err_please_enter_company_name">Please enter company name</string>
    <string name="err_please_enter_phone_number">Please enter phone number</string>
    <string name="err_please_enter_customer_url">Please enter custom Url</string>
    <string name="err_please_enter_confirm_pass">Please enter confirm password</string>
    <string name="password_must_contain_onecharacter">Password should contain one upperCase,
        one lowercase, one numeric and minimum Of 8 characters</string>
    <string name="err_password_do_not_match">Password do not match</string>
    <string name="companysetup">COMPANY SETUP</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="reset_pwd">RESET PASSWORD</string>
    <string name="deactive_user">DEACTIVATE USER</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="account_information">Account Information</string>
    <string name="new_property">NEW PROPERTY</string>
    <string name="properties">Properties</string>
    <string name="account_owner">ACCOUNT OWNER</string>
    <string name="users">USERS</string>
    <string name="mailing_address">MAILING ADDRESS</string>
    <string name="suite_unit">SUITE,UNIT</string>
    <string name="suite_unit_dot">SUITE.UNIT</string>
    <string name="zip">ZIP</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="company_logo">COMPANY LOGO</string>
    <string name="information">INFORMATION</string>
    <string name="value_add">VALUE ADD</string>
    <string name="unit_demographics">UNIT DEMOGRAPHICS</string>
    <string name="signage">SIGNAGE</string>
    <string name="property_walk">PROPERTY WALK</string>
    <string name="rent_roll">RENT ROLL</string>
    <string name="property_name">PROPERTY NAME</string>
    <string name="portfolio_name">PORTFOLIO NAME</string>
    <string name="portfolio_code">PORTFOLIO CODE</string>
    <string name="owner_ship">OWNERSHIP</string>
    <string name="property_managemntco">PROPERTY MANAGEMENT CO</string>
    <string name="property_managemnt">PROPERTY MANAGEMENT </string>
    <string name="street_address">STREET ADDRESS</string>
    <string name="faxNo">FAX NUMBER</string>
    <string name="taxid">TAX ID</string>
    <string name="number_of_units">NUMBER OF UNITS</string>
    <string name="year_built">YEAR BUILT</string>
    <string name="property_logo">PROPERTY LOGO</string>
    <string name="title">TITLE</string>
    <string name="mobile">MOBILE</string>
    <string name="other">OTHER</string>
    <string name="interior_contractor">INTERIOR CONTRACTOR</string>
    <string name="exterior_contractor">EXTERIOR CONTRACTOR</string>
    <string name="unit_type">UNIT TYPE</string>
    <string name="unit_code">UNIT CODE</string>
    <string name="sq_ft">SQ FT</string>
    <string name="bed">BED</string>
    <string name="bthrms">BTHRMS</string>
    <string name="half_bth">1/2 BTH</string>
    <string name="levels">LEVELS</string>
    <string name="car_grg">CAR GRG</string>
    <string name="unit">UNIT#</string>
    <string name="mod">MOD</string>
    <string name="type">TYPE</string>
    <string name="sqft">SQFT</string>
    <string name="half_b">1/2B</string>
    <string name="bldg">BLDG</string>
    <string name="floor">FLOOR</string>
    <string name="strys">STRYS</string>
    <string name="stat">STAT</string>
    <string name="rent">RENT</string>
    <string name="perent">PERENT</string>
    <string name="select_state">Select State</string>
    <string name="exstream">ExStream Admin</string>
    <string name="exstream_admin">ExStream Admin</string>
    <string name="logout">Logout</string>
    <string name="select_permission">Select Permission</string>
    <string name="my_profile">My Profile</string>
    <string name="email_reset_str">Enter Your Registered Email</string>
    <string name="password_reset_str">Enter Your Password</string>
    <string name="confirm_pass_reset_str">Enter Your Confirm Password</string>
    <string name="active_user">ACTIVATE USER</string>
    <string name="err_fisrt_name">First Name is required</string>
    <string name="err_last_name">Last Name is required</string>
    <string name="err_company_name">Company Name is required</string>
    <string name="err_mailing_name">Mailing Address is required</string>
    <string name="err_suite_unit_name">Suite,Unit is required</string>
    <string name="err_zip">Zip is required</string>
    <string name="err_city_name">City Name is required</string>
    <string name="err_select_state">Select State</string>
    <string name="err_emailid">Email is required</string>
    <string name="err_phno">Phone Number is required</string>
    <string name="err_please_enter_valid_mobile_number">Please Enter 10 Digit Phone Number It is not a valid phone number.</string>
    <string name="err_valid_emailid">email is invalid</string>
</resources>
