<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmpass_dialog"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/dimen10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_below="@+id/emailEdt_dialog"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/dimen10"
            android:layout_weight="1"
            android:background="@drawable/btn_background_save"
            android:fontFamily="@font/helveticaneue"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/dimen10"
            android:layout_weight="1"
            android:background="@drawable/btn_background_save"
            android:fontFamily="@font/helveticaneue"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/oswald_extralight"
        android:gravity="center"
        android:text="@string/reset_pwd"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dimen24"
        android:textStyle="bold" />

    <android.propertymanagement.Utils.CommonEditText
        android:id="@+id/password_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEdt_dialog"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/oswald_extralight"
        android:hint="@string/password_reset_str"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/dimen16sp"
        app:met_floatingLabel="highlight" />

    <android.propertymanagement.Utils.CommonEditText
        android:id="@+id/confirmpass_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_dialog"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/oswald_extralight"
        android:hint="@string/confirm_pass_reset_str"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/dimen16sp"
        app:met_floatingLabel="highlight" />

    <android.propertymanagement.Utils.CommonEditText
        android:id="@+id/emailEdt_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/oswald_extralight"
        android:hint="@string/email_reset_str"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/dimen16sp"
        app:met_floatingLabel="highlight" />
</RelativeLayout>